OAP-225 properties file